day7-3 5+Runtime API调用

--- a/w7_HybridApp/myHybrid/index.html
+++ b/w7_HybridApp/myHybrid/index.html
@@ -9,8 +9,56 @@
     <script type="text/javascript" charset="utf-8">
       	mui.init();
     </script>
+
 </head>
 <body>
-	<h1>MUI</h1>
+	<h1>H5+接口调用演示</h1>
+	<ul class="mui-table-view">
+		<li class="mui-table-view-cell mui-media">
+			<a href="javascript:;">
+				<i class="mui-media-object mui-pull-left mui-icon mui-icon-camera"></i>
+				<div class="mui-media-body" id="btnCamera">
+					摄像头
+					<p class='mui-ellipsis'>拍照、录像、二维码...</p>
+				</div>
+			</a>
+		</li>
+		<li class="mui-table-view-cell mui-media">
+			<a href="javascript:;">
+				<i class="mui-media-object mui-pull-left mui-icon mui-icon-mic"></i>
+				<div class="mui-media-body" id="btnSpeech">
+					语音识别
+					<p class='mui-ellipsis'>语音转换文字...</p>
+				</div>
+			</a>
+		</li>
+	</ul>
+	
+	<script>
+		/*
+			使用接口
+				* webview
+		*/
+	   document.addEventListener( "plusready", onPlusReady, false );
+	   function onPlusReady(){console.log('plusReady')
+		// 扩展API加载完毕后调用onPlusReady回调函数 
+			let btnCamera = document.querySelector('#btnCamera')
+			let btnSpeech = document.querySelector('#btnSpeech')
+			
+			btnCamera.onclick = function(){
+				//创建
+				let pageCamera = plus.webview.create( 'views/camera.html', 'page_camera');
+				
+				// 显示创建的webview
+				plus.webview.show('page_camera','slide-in-right');
+				
+				// plus.webview.open()
+			}
+			
+			btnSpeech.onclick = function(){
+				plus.webview.open('views/speech.html','page_speech')
+			}
+		}
+	</script>
 </body>
 </html>
